# multi-coin-gateway

./: .gitignore  Cargo.toml  README.md  push.sh
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/connector-eth/: Cargo.toml
crates/connector-mock/: Cargo.toml
crates/connector-mock/src/: lib.rs
crates/gateway-api/: Cargo.toml
crates/gateway-api/src/: main.rs
crates/gateway-core/: Cargo.toml
crates/gateway-core/src/: lib.rs
