[workspace]
members = [
    "crates/common",
    "crates/connector-mock",
    "crates/gateway-api",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Deen Yusoff <you@example.com>"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
axum = "0.7"
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }
time = { version = "0.3", features = ["formatting"] }
