[package]
name = "gateway-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
common = { path = "../common" }
connector-mock = { path = "../connector-mock" }
anyhow = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
