[package]
name = "gateway-api"
version = "0.1.0"
edition = "2021"

# crates/gateway-api/Cargo.toml
[dependencies]
axum = "0.8.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "yaml"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
dotenvy = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
common = { path = "../common" }
connector-mock = { path = "../connector-mock", package = "connector-mock" }
gateway-core = { path = "../gateway-core" }
