[package]
name = "gateway-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "yaml"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
dotenvy = "0.15"
anyhow = "1"
uuid = "1"
time = "0.3"
common = { path = "../common" }
connector-mock = { path = "../connector-mock", package = "connector-mock" }
gateway-core = { path = "../gateway-core" }
